--- a/RubikCube/RubikCube/RubikCube.csproj
+++ b/RubikCube/RubikCube/RubikCube.csproj
@@ -99,7 +99,7 @@
     <Compile Include="SaveGame.cs" />
     <Compile Include="SwitchGameState.cs" />
     <Compile Include="Text.cs" />
-    <Compile Include="Timer.cs" />
+    <Compile Include="Clocks.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
