--- a/RubikCube/RubikCube/RubikCube.csproj
+++ b/RubikCube/RubikCube/RubikCube.csproj
@@ -86,10 +86,6 @@
     <Compile Include="Cube.cs" />
     <Compile Include="CubeDictionaty.cs" />
     <Compile Include="CubeState.cs" />
-    <Compile Include="firstPopup.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="firstPopup.Designer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="LoadingScreen.cs" />
     <Compile Include="Music.cs" />
@@ -100,6 +96,13 @@
     <Compile Include="SwitchGameState.cs" />
     <Compile Include="Text.cs" />
     <Compile Include="Clocks.cs" />
+    <Compile Include="Tutorial.cs" />
+    <Compile Include="Welcome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Welcome.Designer.cs">
+      <DependentUpon>Welcome.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -134,12 +137,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="firstPopup.resx">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <EmbeddedResource Include="Welcome.resx">
+      <DependentUpon>Welcome.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
