Started working on tree
for some reason the new instances change the old ones

--- a/RubikCube/RubikCube/RubikCube.csproj
+++ b/RubikCube/RubikCube/RubikCube.csproj
@@ -86,13 +86,12 @@
     <Compile Include="Cube.cs" />
     <Compile Include="CubeDictionaty.cs" />
     <Compile Include="CubeState.cs" />
-    <Compile Include="FaceColor.cs" />
+    <Compile Include="CubeConfig.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="LoadingScreen.cs" />
     <Compile Include="Music.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="save.cs" />
     <Compile Include="SaveGame.cs" />
     <Compile Include="SelfSolve.cs" />
     <Compile Include="SwitchGameState.cs" />
